# TPEngine

./: .gitignore  Cube.mtl  Makefile  README.md  level0.tpmap
BlenderExporter/: Exporter.py
Software-Rendering/: CMakeLists.txt  CleanWindowsBuild.bat
Software-Rendering/src/: Bitmap.cpp  Bitmap.h  Camera.cpp  Camera.h  Edge.cpp  Edge.h  ErrorReport.h  Gradients.cpp  Gradients.h  HeadersInclude.h  LevelLoader.cpp  LevelLoader.h  LevelLoader_Obj.cpp  LevelLoader_Obj.h  LevelLoader_TPMap.cpp  LevelLoader_TPMap.h  Main.cpp  Matrix4f.cpp  Matrix4f.h  OBJLevel.cpp  OBJLevel.h  OSSpecificDefine.h  Object.cpp  Object.h  Rasterizer.cpp  Rasterizer.h  Textures.cpp  Textures.h  Transformation.cpp  Transformation.h  TriangulatedMesh.cpp  TriangulatedMesh.h  Vector2f.cpp  Vector2f.h  Vector3.cpp  Vector3.h  Vector3f.cpp  Vector3f.h  Vector4f.cpp  Vector4f.h  (+4 more)
